--- a/pages/todos/qes_show/qes_show.wxml
+++ b/pages/todos/qes_show/qes_show.wxml
@@ -10,15 +10,15 @@
 
 <scroll-view scroll-y class="scrollPage">
   <view class="cu-bar bg-white solid-bottom flex justify-between padding-right">
-    <view class="action">
+<!--     <view class="action">
       <text class="cuIcon-searchlist lg text-blue" bindtap="showModal" data-target="Modal">纠错</text>
-    </view>
+    </view> -->
     <view class="action ">
       <text class="cuIcon-calendar lg text-blue" bindtap="showModal" data-target="bottomModal">答题卡</text>
     </view>
   </view>
 
-  <view class="cu-modal {{modalName=='Modal'?'show':''}}">
+<!--   <view class="cu-modal {{modalName=='Modal'?'show':''}}">
     <view class="cu-dialog bg-white">
       <form bindsubmit="bindFormSubmit">
         <view class="cu-bar bg-white">
@@ -36,7 +36,7 @@
         </view>
       </form>
     </view>
-  </view>
+  </view> -->
 
   <view class="cu-modal bottom-modal {{modalName=='bottomModal'?'show':''}}">
     <view class="cu-dialog">
@@ -48,8 +48,8 @@
       <view class="bg-white padding">
         <scroll-view scroll-y class="scrollPage" style="height: 600rpx;">
           <view class="cu-list grid col-5 ">
-            <view wx:for="{{questions}}" wx:key class="{{item.choose ? 'cu-item bg-blue' : 'cu-item'}}" data-target='{{index}}' bindtap="choose_qesnum">
-              <view class="{{item.choose ? 'text-white' : ''}}">{{index+1}}</view>
+           <view wx:for="{{count}}" wx:key class="{{select_qesnum == index ? 'cu-item bg-blue' : 'cu-item'}}" data-target='{{index}}' bindtap="choose_qesnum">
+              <view class="{{select_qesnum == index ? 'text-white' : ''}}">{{index+1}}</view>
             </view>
           </view>
         </scroll-view>
@@ -62,10 +62,28 @@
   <view class="cu-bar bg-white">
     <view class="weui-cell__bd margin text-lg text-content">
 
-      <rich-text style="display: inline-block;" nodes="{{questions[current].title}}"></rich-text>
+      <rich-text style="display: inline-block;" nodes="{{qes_title}}"></rich-text>
     </view>
   </view>
 
+  <radio-group wx:if="{{qes_type != '1'}}" bindchange="radioChange" class="cu-list menu sm-border card-menu margin">
+    <view class="cu-item margin-top {{item.answer_true ? 'text-green' : ''}} {{item.answer_false ? 'text-red' : ''}}" wx:for="{{qes_options}}" wx:key="{{item.id}}">
+      <label class="action content ">
+
+        <rich-text nodes="{{item.content}}">
+          <radio class="margin-right-sm blue sm radio" value="{{item.value}}" checked="{{item.checked}}"></radio>
+        </rich-text>
+      </label>
+    </view>
+  </radio-group>
+
+
+<!--   <view class="cu-bar bg-white">
+    <view class="weui-cell__bd margin text-lg text-content">
+
+      <rich-text style="display: inline-block;" nodes="{{questions[current].title}}"></rich-text>
+    </view>
+  </view>
   <radio-group wx:if="{{questions[current].type != '1'}}" bindchange="radioChange" class="cu-list menu sm-border card-menu margin">
     <view class="cu-item margin-top {{item.answer_true ? 'text-green' : ''}} {{item.answer_false ? 'text-red' : ''}}" wx:for="{{questions[current].options}}" wx:key="{{item.id}}">
       <label class="action content ">
@@ -75,7 +93,7 @@
         </rich-text>
       </label>
     </view>
-  </radio-group>
+  </radio-group> -->
 
   <checkbox-group wx:if="{{questions[current].type == '1'}}" bindchange="checkboxChange" class="cu-list menu sm-border card-menu margin">
     <view class="cu-item margin-top {{item.answer_true ? 'text-green' : ''}} {{item.answer_false ? 'text-red' : ''}}" wx:for="{{questions[current].options}}" wx:key="{{item.id}}">
@@ -88,14 +106,14 @@
     </view>
   </checkbox-group>
 
-  <view class="margin" wx:if="{{questions[current].type == '3'}}">
+  <view class="margin" wx:if="{{qes_type == '3'}}">
     <button bindtap="showTrueAnswer" class="bg-green margin-bottom">正确答案</button>
-    <rich-text hidden="{{hiddenTrueAnswer}}" nodes="{{questions[current].answer}}"></rich-text>
+    <rich-text hidden="{{hiddenTrueAnswer}}" nodes="{{qes_answer}}"></rich-text>
   </view>
 
   <view class="margin">
     <button bindtap="showAnalyse" class="bg-blue margin-bottom">解析</button>
-    <rich-text hidden="{{hiddenAnalyse}}" nodes="{{questions[current].analyse}}"></rich-text>
+    <rich-text hidden="{{hiddenAnalyse}}" nodes="{{qes_analyse}}"></rich-text>
   </view>
 
   <view class='cu-tabbar-height'></view>
