--- a/pages/my/about/about.wxml
+++ b/pages/my/about/about.wxml
@@ -1,47 +1,15 @@
 <cu-custom bgColor="bg-gradual-green" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">权属公司</view>
+    <view slot="backText">返回</view>
+    <view slot="content">联系我们</view>
 </cu-custom>
 <view class='margin-xl bg-white padding-xl radius shadow-lg'>
-<!-- <block wx:if="{{ongoing}}"> -->
-  <form>
     <view class="margin-lr">
-      <view class="cu-form-group margin-top">
-        <view class="title">名称</view>
-        <input placeholder="名称" name="username" bindinput="usernameInput" value="{{username}}" />
-      </view>
+        <view class="cu-form-group margin-top">
+            <image src="../../../images/qrcode.jpg" mode="widthFix"></image>
+        </view>
 
-<!--       <view class="cu-form-group">
-        <view class="title">手机号</view>
-        <input placeholder="手机号" name="phone" type="phone" bindinput="phoneInput" value = "{{phone}}"/>
-      </view> -->
-      <view class="cu-form-group ">
-        <view class="title">公司</view>
-        <picker bindchange="PickerChange" value="{{index}}" range="{{picker}}">
-          <view class="picker">
-            {{picker[index]}}
-          </view>
-        </picker>
-      </view>
-      <view class="padding flex flex-direction">
-        <button class="cu-btn bg-blue margin-tb-sm lg" bindtap="login">提 交</button>
-      </view>
+<!--         <view class="cu-form-group ">
+            <view class="title">公司</view>
+        </view> -->
     </view>
-  </form>
-<!-- </block> -->
-<!-- <block wx:else>
-    <view class="margin-lr">
-      <view class="cu-form-group margin-top">
-        <view class="title">姓名: {{username}}</view>
-      </view>
-
-      <view class="cu-form-group">
-        <view class="title">手机号: {{phone}}</view>
-      </view>
-
-      <view class="cu-form-group">
-        <view class="title">公司: {{fct}}</view>
-      </view>
-    </view>
-</block> -->
 </view>
