--- a/pages/my/home/home.wxml
+++ b/pages/my/home/home.wxml
@@ -26,12 +26,12 @@
   </view> -->
     <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius">
         <block wx:if="{{hasUserInfo}}">
-<!--              <view class="cu-item arrow">
+            <view class="cu-item arrow">
                 <navigator class="content" url="/pages/my/about/about" hover-class="none">
                     <image src="/images/logo.png" class="png" mode="aspectFit"></image>
-                    <text class="text-grey">权属公司</text>
+                    <text class="text-grey">联系我们</text>
                 </navigator>
-            </view>  -->
+            </view>
             <view class="cu-item arrow">
                 <navigator class="content" url="/pages/speak/index/index" hover-class="none">
                     <text class="cuIcon-attention text-blue"></text>
